; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_negx_16_ix.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_negx_16_ix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FLAG_N = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4
@FLAG_X = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_negx_16_ix() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32 (...) @EA_AY_IX_16()
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* %1, align 4
  %6 = call i32 @m68ki_read_16(i32 %5)
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @MASK_OUT_ABOVE_16(i32 %7)
  %9 = sub nsw i32 0, %8
  %10 = call i32 (...) @XFLAG_AS_1()
  %11 = sub nsw i32 %9, %10
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @NFLAG_16(i32 %12)
  store i32 %13, i32* @FLAG_N, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @CFLAG_16(i32 %14)
  store i32 %15, i32* @FLAG_C, align 4
  store i32 %15, i32* @FLAG_X, align 4
  %16 = load i32, i32* %2, align 4
  %17 = load i32, i32* %3, align 4
  %18 = and i32 %16, %17
  %19 = ashr i32 %18, 8
  store i32 %19, i32* @FLAG_V, align 4
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @MASK_OUT_ABOVE_16(i32 %20)
  store i32 %21, i32* %3, align 4
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* @FLAG_Z, align 4
  %24 = or i32 %23, %22
  store i32 %24, i32* @FLAG_Z, align 4
  %25 = load i32, i32* %1, align 4
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @m68ki_write_16(i32 %25, i32 %26)
  ret void
}

declare dso_local i32 @EA_AY_IX_16(...) #1

declare dso_local i32 @m68ki_read_16(i32) #1

declare dso_local i32 @MASK_OUT_ABOVE_16(i32) #1

declare dso_local i32 @XFLAG_AS_1(...) #1

declare dso_local i32 @NFLAG_16(i32) #1

declare dso_local i32 @CFLAG_16(i32) #1

declare dso_local i32 @m68ki_write_16(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
